syntax = "proto3";

package ifc;

service PiazzaService {
    rpc post_msg (PostPayload) returns (PostResponse);
    rpc see_board (FetchPayload) returns (FetchResponse);
}

message PostPayload {
    string msg = 1;
    string author = 2;
    bool public = 3;
    bool anon = 4;
    Label label = 5;
}

message FetchPayload {
    Label label = 1;
}

message PostResponse {
    uint32 msg_id = 1;
}

message FetchResponse {
    string msg_board = 1;
    Label label = 2;
}

message Label {
    bool secrecy = 1;
}